--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-!pip install scikit-learn
-
+scikit-learn
 streamlit==0.89.0
 pandas==1.3.3
 matplotlib==3.4.3
-numpy==1.21.2
+numpy==1.22.0
 scipy==1.7.1
